# sui-wallet

./: README.md  canister_ids.json  dfx.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/backend/: Cargo.toml  backend.did
src/backend/declarations/: backend.did  backend.did.d.ts  backend.did.js
src/backend/src/: lib.rs
src/backend/src/service/: get_address.rs  get_public_key.rs  mod.rs  sign.rs
src/frontend/: App.tsx  AuthGuard.tsx  index.css  main.tsx
src/frontend/components/: balance.tsx  btc-address.tsx  login.tsx  logout.tsx  receive-button.tsx  send-button.tsx  send-confirmation.tsx  sui-address.tsx  wallet-warning.tsx  wallet.tsx
src/frontend/hooks/: useBtcAddress.tsx  useBtcBalance.tsx  useSendSui.tsx  useSuiAddress.tsx  useSuiBalance.tsx
src/frontend/lib/: sui.ts
src/internet_identity/declarations/: internet_identity.did.d.ts
