[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
candid = "0.10.13"
ic-cdk = "0.18.5"
serde = "1.0.132"
serde_json = "1.0"
sui-sdk = "0.48.0"
tokio = { version = "1", features = ["full"] }
# getrandom = { version = "0.2.15", features = ["custom"] }
