[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
candid = "0.10.20"
ic-cdk = "0.18.7"
serde = "1.0.228"
serde_json = "1.0.145"
serde_bytes = "0.11.19"
blake2 = "0.10.6"
blake2b_simd = "1.0.3"
hex-literal = "1.0.0"
sha2 = "0.10.9"
